Commit inicial do trbalho de dooIII

--- a/TrabMsg_App/AndroidManifest.xml
+++ b/TrabMsg_App/AndroidManifest.xml
@@ -14,5 +14,7 @@
         </activity>
         <activity android:name="Opcoes" 
                   android:label="Opções"/>
+        <activity android:name="ListMsgEnviadas" 
+                  android:label="Msg. Enviadas"/>
     </application>
 </manifest> 
