Commit inicial do trbalho de dooIII

--- a/TrabMsg_App/AndroidManifest.xml
+++ b/TrabMsg_App/AndroidManifest.xml
@@ -16,5 +16,7 @@
                   android:label="Opções"/>
         <activity android:name="ListMsgEnviadas" 
                   android:label="Msg. Enviadas"/>
+        <activity android:name="ListMsgRecebidas" 
+                          android:label="Msg. Recebidas"/>
     </application>
 </manifest> 
