--- a/TrabMsg_App/AndroidManifest.xml
+++ b/TrabMsg_App/AndroidManifest.xml
@@ -5,7 +5,7 @@
           android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:label="@string/app_name" >
-        <activity android:name="Inicial"
+        <activity android:name="FrmLogin"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
